# vibe-trading

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  trade-cron.yml
evals/: baseline.json  build_golden_set.py  scan_candidates.py
evals/snapshots/: 001-example-bullish-breakout.yaml  001-sol-strong-bullish.yaml  002-example-bearish-fakeout.yaml  002-link-strong-bullish.yaml  003-pengu-strong-bullish.yaml  004-btc-jan-breakout.yaml  005-btc-apr-breakout.yaml  006-eth-may-bearish.yaml  007-sol-may-bearish.yaml  008-btc-jan-overbought.yaml  009-btc-may-overbought.yaml  010-btc-jan-oversold.yaml  011-eth-jan-oversold.yaml  012-btc-apr-range.yaml  013-eth-apr-range.yaml  014-sui-volume-divergence.yaml  015-eth-apr-long.yaml  016-sol-feb-long.yaml  017-sui-mar-long.yaml  018-btc-apr-long.yaml  019-eth-feb-short.yaml  020-link-mar-short.yaml  021-near-mar-short.yaml  022-avax-mar-short.yaml  (+12 more)
scripts/: binance_testnet_smoke.py  reset_account.py
tests/: test_audit.py  test_binance_futures.py  test_cli_trade_once.py  test_client_guardrails.py  test_cost.py  test_db.py  test_decision_pipeline.py  test_eval.py  test_journal.py  test_mcp_server.py  test_monitoring.py  test_multi_provider.py  test_paper_broker.py  test_risk.py  test_scheduler.py  test_schema_robustness.py  test_state_sync.py  test_trader.py  test_trending.py  test_web_positions.py  test_web_security.py  test_ws_listener.py
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
(+63 files in other folders)
