[project]
name = "vibe-trading"
version = "0.1.0"
description = "A crypto swing-trading system powered by Google Gemini multi-agent reasoning and deterministic risk rules."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "ccxt>=4.2.0",
    "duckdb>=0.10.0",
    "google-genai>=0.1.0",
    "quantstats>=0.0.62",
    "apscheduler>=3.10.4",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.1",
    "TA-Lib>=0.4.28",
    "langfuse>=4.0.0",
    "openinference-instrumentation-google-genai",
    "opentelemetry-api",
    "opentelemetry-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.98.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
